# os-final

./: CMakeLists.txt  README.md  Report.md  shell.sh  uninstall.sh  决赛报告.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/frame/: main.cpp
src/operation/: defappmodel.cpp  defappmodel.h  defappworker.cpp  defappworker.h
src/plugin-defaultapp/operation/: defappmodel.cpp  defappworker.cpp
src/plugin-defaultapp/window/: defappdetailwidget.h  selfstartdetailwidget.cpp  selfstartupdetailwidget.cpp  selfstartupplugin.cpp  selfstartupplugin.h
src/plugin-defaultapp/window/widgets/: addbuttonwidget.h  category.cpp  category.h
src/plugin-selfstartup/operation/: defappmodel.h  defappworker.cpp  defappworker.h
src/plugin-selfstartup/operation/qrc/: selfstartup.qrc
src/plugin-selfstartup/window/: selfstartupdetailwidget.cpp  selfstartupdetailwidget.h  selfstartupplugin.cpp  selfstartupplugin.h
src/plugin-selfstartup/window/widgets/: addbuttonwidget.cpp  addbuttonwidget.h  category.h
src/window/: defappdetailwidget.cpp  defappdetailwidget.h  defappplugin.cpp  defappplugin.h  selfstartupdetailwidget.cpp  selfstartupdetailwidget.h  selfstartupplugin.cpp  selfstartupplugin.h
src/window/widgets/: addbuttonwidget.cpp  category.cpp  category.h
translations/: dde-control-center_zh_CN.ts  self-startup-plugin_zh_CN.ts  translations.qrc
