cmake_minimum_required(VERSION 3.10)
project(test-plugin)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

add_subdirectory(frame)
add_subdirectory(include)
add_subdirectory(interface)
add_subdirectory(plugin-defaultapp)
add_subdirectory(translations)
add_subdirectory(widgets)
